--- a/1.css
+++ b/1.css
@@ -1,247 +1,396 @@
 *{margin: 0;padding: 0}
 
-.slide .carousel-inner {
-    height: 100%;
+section.quanaonu .row {
+    /* flex-direction: row-reverse; */
 }
 
-.slide .carousel-inner img {
-    width: 100%;
-    height: 100%;
-}
-
-.slide {
-    height: 517px;
-    width: 100%;
-}
-
-header .logo .row .buy {
-    position: fixed;
-    /* float: right; */
-    right: 98px;
-}
-
-header .logo .row .buy .soluong {
-    position: fixed;
-    top: 180px;
-    right: 108px;
-    font-weight: 700;
-    color: #4CAF50;
-}
-
-header .logo .row .buy i {
-    font-size: 31px;
-    padding-top: 10px;
-}
-
-header .logo {
-    height: 170px;
-    width: 100%;
-    /* background: #b5b5b5; */
-    border-bottom: 1px solid black;
-}
-
-header .logo .row:nth-child(1) {
-    height: 116px;
-}
-
-header .logo .row .thesearch {
-    position: fixed;
-    top: 166px;
-    border: 1px solid black;
-    background: white;
-    border-radius: 46px;
-    overflow: hidden;
-    transition: 0.4s;
-    cursor: pointer;
-    border: none;
-}
-
-header .logo .row .thesearch:hover i div {
-    opacity: 0;
-    width: 0;
-    visibility: hidden;
-}
-
-header .logo .row .thesearch:hover {
-    border: 1px solid black;
-}
-
-header .logo .row .thesearch:hover i span {
-    /* width: 0!important; */
-    opacity: 0;
-    visibility: hidden;
-}
-
-header .logo .row .thesearch i {padding: 10px 10px 10px 10px;font-size: 26px;/* float: left; */height: 46px;}
-
-header .logo .row .thesearch i div {
-    float: right;
-    color: #616161;
-    font-size: 23px;
-    /* font-weight: 100; */
-    /* transition: 0.4s; */
-    transition: 0.4s;
-    opacity: 1;
-    visibility: visible;
-}
-
-header .logo .row .thesearch i span {padding-left: 10px;color: #4c4c4c;}
-
-header .logo .row .thesearch input {
-    border: none;
-    /* padding: 0 17px 0 0; */
-    opacity: 0;
-    visibility: hidden;
-    width: 0;
-    padding: 0;
-    transition: 1s;
-}
-
-header .logo .row .thesearch:hover input {
-    width: 146px;
-    opacity: 1;
-    padding-right: 17px;
-    visibility: visible;
-}
-
-header .logo .row .bg-faded {
-    background: none;
+section.quanaonam .text a, section.quanaonu .text a,section.quanaotreem .text a {
+    border-color: black;
+    color: black;
+    border-radius: 0px;
+    /* padding-top: 13px; */
+    /* margin-top: 71px; */
     margin: auto;
+    text-transform: uppercase;
+    transition: 0.4s;
 }
 
-header .logo .row .bg-faded a {padding: 16px 15px 5px 15px;color: black;transition: 0.4s;text-transform: uppercase;}
+section.quanaonam .text a:hover, section.quanaonu .text a:hover, section.quanaotreem .text a:hover {
+    color: white;
+    background: black;
+}
+@font-face {
+	font-family: "fontcollection";
+	src:url("fonts/fontcollection/FracturaND/FracturaND.ttf");
+}
+section.quanaonam .anh div#carousel-example-generic .carousel-item.active {
+    height: 100%;
+}
 
-header .logo .row .bg-faded li {
+section.quanaonam .anh div#carousel-example-generic .carousel-inner, section.quanaonu .anh div#carousel-example-generic .carousel-inner,section.quanaotreem .anh div#carousel-example-generic .carousel-inner {
+    height: 100%;
+}
+
+section.quanaonu .anh div#carousel-example-generic .carousel-inner {}
+
+section.quanaonam .anh div#carousel-example-generic img, section.quanaonu .anh div#carousel-example-generic img,section.quanaotreem .anh div#carousel-example-generic img {
+    /* height: 100%; */
+    /* transform: translateY(-34px); */
+    min-height: 525px;
+}
+
+section.quanaonam .anh div#carousel-example-generic {
+    width: 100%;
+    height: 100%;
+}
+
+section.quanaonu .anh div#carousel-example-generic,section.quanaotreem .anh div#carousel-example-generic {
+    width: 100%;
+    height: 100%;
+}
+
+.thanhslide div#carousel-example-generic .carousel-inner {
+    height: 100%;
+}
+
+.thanhslide div#carousel-example-generic .carousel-item {
+    width: 100%;
+    height: 100%;
+}
+
+.thanhslide div#carousel-example-generic .carousel-item img {
+    width: 100%;
+    height: 100%;
+}
+
+.thanhslide div#carousel-example-generic {
+    height: 100%;
+    width: 100%;
+}
+
+.thanhslide div#carousel-example-generic a:hover {
+    background: none;
+}
+
+.thanhslide div#carousel-example-generic a {
+    background: none;
+}
+
+header .menutop .menu .navbar ul li {
     margin: 0;
+    /* position: inherit; */
+    /* z-index: 99; */
 }
 
-header .logo .row .bg-faded button {
-    float: right!important;
-    /* right: 0; */
+header .menutop .menu .navbar ul {
+    position: relative;
+    z-index: 0;
 }
 
-header .logo .row .bg-faded .themove {
-    position: fixed;
-    /*width: 105px;
-    left: 430px;*/
-    height: 46px;
+header .menutop .menu .navbar ul li:nth-child(1) a {
+   
+}
+
+header .menutop .menu .navbar ul .themove {
+    position: absolute;
+    width: 116px;
+    height: 53px;
     background: black;
     z-index: -99;
     transition: 0.4s;
 }
 
-header .logo h1 {
-    margin: auto;
+header .menutop .menu .navbar {
+    padding: 0;
+    height: 100%;
+    /* width: 100%; */
+    background: none;
 }
 
-.thanhden ul {
-    list-style: none;
-    /* float: right; */
-    margin: 0;
-    margin-top: 10px;
-}
+header .menutop .menu .navbar {}
 
-.thanhden {
-    height: 47px;
-    width: 100%;
-    background: black;
+header .menutop .menu .navbar ul li:nth-child(2) a {
+    
 }
-
-.thanhden ul li {
-    float: left;
-    margin-right: 2vw;
-}
-
-.thanhden ul li:nth-child(3) {
-    margin-right: 0;
-}
-
-.thanhden ul li a {
+header .menutop .menu .navbar ul li a {
     text-transform: uppercase;
+    color: black;
+    padding: 22px 18px;
+    font-size: 17px;
+    padding-bottom: 6px;
+}
+
+header .menutop .menu .navbar ul li:nth-child(1) a {
     color: white;
-    text-decoration: none;
+}
+
+header .menutop .menu .navbar ul li:nth-child(1) a {
+    color: white!important;
+    z-index: 9;
+}
+
+.about {
+    width: 100%;
+    height: 500px;
+    background: pink;
+}
+
+section.quanaonu {
+    height: 600px;
+    width: 100%;
+    background: orange;
+    background: #efefef00;
+    height: 700px;
+    width: 100%;
+    overflow-x: hidden;
+}
+
+section.quanaonam .text, section.quanaonu .text,section.quanaotreem .text {
+    margin-top: 75px;
+    /* color: white; */
+    padding-bottom: 75px;
+}
+
+section.quanaonam .text h1, section.quanaonu .text h1,section.quanaotreem .text h1 {font-family: "fontcollection";text-align: center;padding-top: 130px;margin-bottom: 36px;}
+
+section.quanaonam, section.quanaotreem {
+    background: #efefef69;
+    height: 700px;
+    width: 100%;
+    overflow-x: hidden;
+}
+
+section.quanaonam .anh, section.quanaonu .anh, section.quanaotreem .anh {
+    height: 550px;
+    /* background: black; */
+    margin-top: 75px;
+    color: white;
+    overflow: hidden;
+    /* padding: 0; */
+}
+
+section.quanaonam .anh {}
+
+section.quanaonam .anh {}
+
+section.thanhslide {
+    width: 100%;
+    /* background: green; */
+    height: 520px;
+    /* max-width: 1992px; */
+    /* margin: auto; */
+}
+
+section.thanhslide .container {
+    height: 100%;
+}
+
+html,body {
+    width: 100%;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 header {
     width: 100%;
-    font-family: 'Roboto Condensed', sans-serif;
-}
-html,body{
-	width: 100%;
-}
-@media (max-width: 991px){
-	*{}
-
-header .logo .row:nth-child(2) {
-    width: 0%;
 }
 
-header .logo .row .bg-faded #exCollapsingNavbar2 {
-    /* float: right; */
+header .thanhden {
     width: 100%;
-    position: fixed;
-    right: 0;
-    top: 48px;
+    height: 25px;
     background: black;
 }
 
-header .logo .row .bg-faded #exCollapsingNavbar2 a {
-    color: white;
-    padding-right: 13vw;
-    /* padding-left: 77vw; */
-    /* float: right; */
-    text-align: right;
-}
-
-header .logo .row .bg-faded button {
-    position: fixed;
-    right: 13vw;
-    /* color: white!important; */
-    border-color: white;
-}
-
-header .logo .row .bg-faded button i {
-    color: white;
-}
-
-header .logo .row .thesearch {
-    opacity: 0;
-    visibility: hidden;
-}
-
-header .logo {
-    height: 59px;
-    background: black;
-}
-
-header .logo h1 {
-    font-size: 30px;
-    /* margin-top: 13px; */
-    color: white;
-}
-
-header .logo .row:nth-child(1) {
-    /* width: 100%; */
-    width: 20%;
-    float: left;
-    height: 59px;
-}
-
-.thanhden {
-    opacity: 0;
-    visibility: hidden;
-    height: 0;
-}
-
-header .logo .row .bg-faded {
+header .thanhden ul {
+    list-style: none;
+    float: right;
     margin: 0;
 }
 
-header .logo .row .buy {
+header .thanhden ul li a {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: white;
+}
+
+header .thanhden ul li {
+    float: left;
+    margin: 0 10px;
+    /* margin-bottom: 0; */
+}
+
+header .menutop {
+    width: 100%;
+    background: none;
+    height: 140px;
+}
+
+header .menutop .logo {
+    height: 87px;
+    background: none;
+    /* margin: auto; */
+    /* justify-content: center; */
+    vertical-align: middle;
+}
+
+header .menutop .logo h1 {
+    /* margin: auto; */
+    display: inline-block;
+    margin: 0;
+    /* text-align: center; */
+    vertical-align: middle;
+    margin-top: 21.5px;
+}
+
+header .menutop .menu {
+    height: 53px;
+    /* background: blue; */
+}
+
+header .menutop .menu .icons {
+    float: right;
+}
+
+header .menutop .menu .icons .thesearch {
+    float: left;
+    background: none;
+    border: 1px solid black;
+    border-color: #ffffff00;
+    border-radius: 34px;
+    overflow: hidden;
+    transition: 0.4s;
+    margin-top: 6px;
+    cursor: pointer;
+}
+
+header .menutop .menu .icons .thesearch input {
+    border: none;
+    /* margin-top: -114px; */
+    transform: translateY(-5px);
+    /* padding-left: 13px; */
+    width: 0;
+    transition: 0.4s;
+    /* display: inline-block; */
+    text-align: right;
+}
+
+header .menutop .menu .icons .thesearch:hover input {
+    width: 160px;
+}
+
+header .menutop .menu .icons .thesearch:hover {border-color: #adacac;}
+
+header .menutop .menu .icons .thebag {
+    float: left;
+    position: relative;
+}
+
+header .menutop .menu .icons .thebag::before {content: "0";position: absolute;left: 43%;top: 41%;color: #00BCD4;font-weight: 600;}
+
+header .menutop .menu .icons .thebag i {
+    padding: 14px 15px;
+    /* padding-right: 0; */
+    padding-bottom: 6px;
+    font-size: 30px;
+    color: #656d73;
+}
+
+header .menutop .menu .icons .thesearch i {
+    font-size: 30px;
+    padding: 8px 10px;
+    color: #656d73;
+    padding-bottom: 6px;
+}
+
+header .menutop .menu .icons .thesearch:hover i {}
+@media (max-width: 991px){
+	*{}
+
+header .menutop .menu .icons .thesearch:hover {
+    background: white;
+}
+
+header .menutop .menu .navbar ul .themove {
     opacity: 0;
     visibility: hidden;
 }
+
+header .menutop .menu .navbar {
+    height: auto;
+    position: relative;
+    z-index: 2;
 }
-.nav-link.fonttrang{
-	color: white!important;
+
+header .menutop .menu .navbar ul {
+    /* margin-top: 9px; */
+    /* padding-top: 37px; */
+}
+
+header .menutop .menu .navbar button {
+    color: black;
+    border: none;
+}
+
+header .menutop .menu .navbar ul li a {
+    color: white!important;
+    text-align: right;
+    /* display: inline-block; */
+}
+
+header .menutop .menu .navbar div#exCollapsingNavbar2 {
+    background: black;
+    margin-top: -1px;
+    padding-top: 24px;
+    width: 100%;
+}
+
+header .menutop .logo h1 {}
+
+header .menutop .logo h1 {
+    margin-top: 4.5px;
+}
+
+header .menutop .logo {
+    height: 53px;
+}
+
+header .menutop {
+    height: auto;
+}
+}
+@media (max-width: 767px){
+	*{}
+
+section.quanaonu .row {
+    flex-direction: column-reverse;
+}
+
+section.quanaonam .text h1, section.quanaonu .text h1,section.quanaotreem .text h1 {
+    padding: 0px;
+    font-size: 90px;
+}
+
+section.quanaonam .anh div#carousel-example-generic img {
+    height: auto;
+}
+
+header .menutop .menu {
+    padding-right: 0;
+}
+
+section.quanaonam, section.quanaonu,section.quanaotreem {
+    height: auto;
+}
+}
+@media (max-width: 575px){
+	*{}
+
+section.quanaonam .text, section.quanaonu .text,section.quanaotreem .text {
+    margin-top: 0;
+    padding-bottom: 38px;
+}
+
+section.quanaonam .text h1, section.quanaonu .text h1,section.quanaotreem .text h1 {
+    font-size: 15vw;
+    /* margin-top: 0; */
+}
 }
