--- a/1.css
+++ b/1.css
@@ -1,5 +1,122 @@
 *{margin: 0;padding: 0}
 
+.signin .row .text {
+    background: white;
+}
+
+.signin .row .text form {
+    margin-bottom: 20px;
+}
+
+.signin .row .text button {
+    padding: 11px 29px;
+    border-color: black;
+    color: black;
+    text-transform: uppercase;
+    border-radius: 0;
+    transition: 0.3s;
+}
+
+.signin .row .text button:hover {
+    background: black;
+    color: white;
+}
+
+.signin .row .text h1 {
+    padding-top: calc(40vh - 150px);
+}
+
+.signin .row .text .form-control {
+    width: 30%;
+    border-color: white;
+    text-align: center;
+    margin: auto;
+    border-radius: 17px;
+    transition: 0.4s;
+    box-shadow: 4px 7px 11px #c5c5c5;
+}
+
+.signin .row .text .form-check-input {
+    /* margin: 0; */
+    /* width: 13px; */
+    /* margin: auto; */
+    /* background: white; */
+    /* border: none; */
+    /* box-sizing: unset; */
+}
+
+.signin .row .text .form-control:focus {
+    width: 50%;
+    border-color: white;
+}
+
+.signin .row .text a {
+    text-decoration: none;
+}
+
+.signin {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background: #ffffffab;
+    z-index: 30;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.4s;
+}
+
+.signin i {
+    position: fixed;
+    right: 5px;
+    top: 5px;
+    font-size: 28px;
+    filter: blur(1px);
+    cursor: pointer;
+    /* box-shadow: 1px 1px 1px black; */
+    color: #717171;
+    transition: 0.4s;
+}
+
+.signin i:hover {
+    color: black;
+    filter: none;
+}
+
+.signin .row {
+    width: 80vw;
+    height: 80vh;
+    left: 10%;
+    top: 10%;
+    position: fixed;
+    /* border: 1px solid black; */
+    border-radius: 15px;
+    /* z-index: 99; */
+    overflow: hidden;
+    box-shadow: 3px 5px 9px 3px #5f5f5f;
+}
+
+.signin .row .anh {
+    height: 100%;
+    /* background: yellow; */
+    padding: 0;
+    overflow: hidden;
+}
+
+.signin .row .anh img {
+    max-height: 100%;
+    /* width: auto; */
+    width: 100%;
+    height: 80vh;
+    /* transform: translateX(0px); */
+    /* transform: translateX(10px); */
+    /* left: 0px; */
+    padding-left: 1px;
+    min-height: 520.8px;
+    min-width: 352.53px;
+}
+
+
+
 section.quanaonu .row {
     /* flex-direction: row-reverse; */
 }
@@ -270,7 +387,7 @@ header .menutop .menu .icons .thesearch input {
     width: 0;
     transition: 0.4s;
     /* display: inline-block; */
-    text-align: right;
+    text-align: center;
 }
 
 header .menutop .menu .icons .thesearch:hover input {
@@ -383,6 +500,22 @@ section.quanaonam, section.quanaonu,section.quanaotreem {
 }
 @media (max-width: 575px){
 	*{}
+
+.signin .row {
+    flex-direction: column;
+    width: 86vw;
+}
+
+.signin .row .text {
+    height: 80vh;
+    position: absolute;
+}
+
+.signin .row .anh {
+    opacity: 0;
+    visibility: hidden;
+    height: 0;
+}
 
 section.quanaonam .text, section.quanaonu .text,section.quanaotreem .text {
     margin-top: 0;
